Support customisable max ttl (#109)
Co-authored-by: Claude Opus 4.7 (1M context) <noreply@anthropic.com>